--- a/server/pom.xml
+++ b/server/pom.xml
@@ -57,6 +57,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>com.fasterxml.jackson.jaxrs</groupId>
+	  <artifactId>jackson-jaxrs-json-provider</artifactId>
+	  <version>2.9.7</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.fasterxml.jackson.core</groupId>
+	  <artifactId>jackson-databind</artifactId>
+	  <version>2.9.7</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
